initialize report parameters + minor fixes in reports

--- a/olca-app-html/src/report_view/templates/process_contribution_chart.html
+++ b/olca-app-html/src/report_view/templates/process_contribution_chart.html
@@ -20,5 +20,11 @@
 			</span>	
 			{{process.reportName}}
 		</span>
+		<span style="padding: 10px">
+			<span class="glyphicon glyphicon-stop" 
+				  style="color: rgb(151,187,205); padding: 3px">
+			</span>	
+			Other
+		</span>
 	</div>
 </div>
