--- a/olca-app-html/src/report_view/templates/process_contribution_chart.html
+++ b/olca-app-html/src/report_view/templates/process_contribution_chart.html
@@ -11,20 +11,7 @@
 		width="650" 
 		height="400">		
 	</canvas>
-	<div style="padding-left: 20px; padding-right: 20px; text-align: center">
-		<span
-			data-ng-repeat="process in report.processes"
-			style="padding: 10px">
-			<span class="glyphicon glyphicon-stop" 
-				  style="color: {{getColorString($index)}}; padding: 3px">
-			</span>	
-			{{process.reportName}}
-		</span>
-		<span style="padding: 10px">
-			<span class="glyphicon glyphicon-stop" 
-				  style="color: rgb(151,187,205); padding: 3px">
-			</span>	
-			Other
-		</span>
+	<div data-contribution-legend
+		style="padding-left: 20px; padding-right: 20px; text-align: center">
 	</div>
 </div>
