--- a/olca-app-html/src/report_view/templates/single_score_bar_chart.html
+++ b/olca-app-html/src/report_view/templates/single_score_bar_chart.html
@@ -4,14 +4,7 @@
 		width="650" 
 		height="400">		
 	</canvas>
-	<div style="padding-left: 20px; padding-right: 20px; text-align: center">
-		<span
-			data-ng-repeat="indicator in getDisplayedIndicators()"
-			style="padding: 10px">
-			<span class="glyphicon glyphicon-stop" 
-				  style="color: {{getColorString($index)}}; padding: 3px">
-			</span>	
-			{{indicator.reportName}}
-		</span>
+	<div data-indicator-legend
+		style="padding-left: 20px; padding-right: 20px; text-align: center">
 	</div>
 </div>
