added translation support for project reports

--- a/olca-app-html/src/report_view/templates/impact_result_table.html
+++ b/olca-app-html/src/report_view/templates/impact_result_table.html
@@ -2,9 +2,9 @@
 	<table class="table table-hover reportTable">
 		<thead>
 			<tr>
-				<th>LCIA category</th>
+				<th>{{Messages.ImpactCategory}}</th>
 				<th data-ng-repeat="variant in report.variants">{{variant.name}}</th>
-				<th>Unit</th>
+				<th>{{Messages.Unit}}</th>
 			</tr>
 		</thead>
 		<tbody>
