--- a/olca-app-html/src/report_view/templates/indicator_bar_chart.html
+++ b/olca-app-html/src/report_view/templates/indicator_bar_chart.html
@@ -1,5 +1,5 @@
 <div style="width: 650px; margin: auto;">	
-	<select title="LCIA Category"
+	<select title="{{Messages.ImpactCategory}}"
 		id="indicatorSelection" 
 		class="form-control indicator-selection-combo" 
 		data-ng-options="indicator.reportName for indicator in getDisplayedIndicators()" 
