--- a/olca-app-html/src/report_view/templates/indicator_description_table.html
+++ b/olca-app-html/src/report_view/templates/indicator_description_table.html
@@ -2,9 +2,9 @@
 	<table class="table table-hover reportTable">
 		<thead>
 			<tr>
-				<th>LCIA category</th>
-				<th>Unit</th>
-				<th>Description</th>
+				<th>{{Messages.ImpactCategory}}</th>
+				<th>{{Messages.Unit}}</th>
+				<th>{{Messages.Description}}</th>
 			</tr>
 		</thead>
 		<tbody>
