--- a/olca-app-html/src/report_view/templates/parameter_description_table.html
+++ b/olca-app-html/src/report_view/templates/parameter_description_table.html
@@ -2,8 +2,8 @@
 	<table class="table table-hover reportTable">
 		<thead>
 			<tr>
-				<th>Parameter</th>
-				<th>Description</th>
+				<th>{{Messages.Parameter}}</th>
+				<th>{{Messages.Description}}</th>
 			</tr>
 		</thead>
 		<tbody>
