--- a/olca-app-html/src/report_view/templates/variant_description_table.html
+++ b/olca-app-html/src/report_view/templates/variant_description_table.html
@@ -1,6 +1,11 @@
 <div class="table-responsive">
 	<table class="table table-hover reportTable">
-		<thead><tr><th>Variant</th><th>Description</th></tr></thead>
+		<thead>
+			<tr>
+				<th>{{Messages.Variant}}</th>
+				<th>{{Messages.Description}}</th>
+			</tr>
+		</thead>
 		<tbody>
 			<tr data-ng-repeat="variant in report.variants">
 				<td>{{variant.name}}</td>
