--- a/olca-app-html/src/report_view/templates/parameter_value_table.html
+++ b/olca-app-html/src/report_view/templates/parameter_value_table.html
@@ -2,7 +2,7 @@
 	<table class="table table-hover reportTable">
 		<thead>
 			<tr>
-				<th>Parameter</th>
+				<th>{{Messages.Parameter}}</th>
 				<th data-ng-repeat="variant in report.variants">{{variant.name}}</th>
 			</tr>
 		</thead>
