--- a/olca-app-html/src/report_view/templates/single_score_table.html
+++ b/olca-app-html/src/report_view/templates/single_score_table.html
@@ -2,7 +2,7 @@
 	<table class="table table-hover reportTable">
 		<thead>
 			<tr>
-				<th>LCIA category</th>
+				<th>{{Messages.ImpactCategory}}</th>
 				<th data-ng-repeat="variant in report.variants">{{variant.name}}</th>
 			</tr>
 		</thead>
