updated German translations

--- a/olca-app-html/src/report_view/templates/single_score_table.html
+++ b/olca-app-html/src/report_view/templates/single_score_table.html
@@ -16,7 +16,7 @@
 				</td>
 			</tr>
 			<tr>
-				<td><b>Total</b></td>
+				<td><b>{{Messages.Sum}}</b></td>
 				<td data-ng-repeat="variant in report.variants">
 					<b>{{getSingleScore(variant) | scientific}}</b>
 				</td>
