Setting openLCA Version in Start page dynamically

--- a/olca-app-html/src/start_page/mixins/header.jade
+++ b/olca-app-html/src/start_page/mixins/header.jade
@@ -5,7 +5,7 @@ mixin header()
 				img.app-logo(src='images/logo_start_page.png')
 			.center
 				h1!=msg.title
-				h2!=msg.subtitle
+				h2#version
 		.row
 			.right
 				img.company-logo(src='images/greendelta-logo.png')
