Updated welcome page

--- a/olca-app-html/src/start_page/mixins/header.jade
+++ b/olca-app-html/src/start_page/mixins/header.jade
@@ -8,7 +8,8 @@ mixin header()
 				h2#version
 		.row
 			.right
-				img.company-logo(src='images/greendelta-logo.png')
+				a(href='http://www.greendelta.com' target='_blank')
+					img.company-logo(src='images/greendelta-logo.png')
 			.center
 				p!=msg.subtext
 		.clear
