--- a/olca-app-html/src/start_page/start_page.styl
+++ b/olca-app-html/src/start_page/start_page.styl
@@ -19,7 +19,7 @@ h1, h2, h3, h4, h5
 	margin 0
 	
 h1
-	font-size 36px
+	font-size 44px
 	
 h2 
 	font-size 24px
@@ -28,7 +28,7 @@ h2
 header
 	padding 10px 30px 0 30px
 	background-image url('images/header.png')
-	border-bottom 1px solid rgb(212, 212, 212)
+	border-bottom 1px solid rgb(92, 147, 177, 0.8)
 	
 	h1
 		color rgb(252, 253, 254)
@@ -48,7 +48,10 @@ header
 	.company-logo
 		height 24px
 		float right		
-		margin-top 50px
+		margin-top 30px
+
+		&:hover
+			content url('images/greendelta-logo-green.png')
 
 .left
 	float left
@@ -67,16 +70,16 @@ header
 	clear both
 	
 #whats-new
-	background-color rgb(238, 236, 225)
+	background-color rgb(82, 137, 167, 0.8)
 
 #getting-started
-	background-color rgb(244, 243, 236)
+	background-color rgb(106, 163, 193, 0.8)
 	
 #manuals
-	background-color rgb(249, 248, 245)
+	background-color rgb(167, 189, 203, 0.8)
 	
 #community
-	background-color rgb(255, 255, 255)
+	background-color rgb(151, 195, 216, 0.8)
 		
 #main
 
