--- a/olca-app-html/src/start_page/mixins/header.jade
+++ b/olca-app-html/src/start_page/mixins/header.jade
@@ -9,7 +9,7 @@ mixin header()
 		.row
 			.right
 				a(href='http://www.greendelta.com' target='_blank')
-					img.company-logo(src='images/greendelta-logo.png')
+					img.company-logo(src='images/greendelta-logo-active.png')
 			.center
 				p!=msg.subtext
 		.clear
