--- a/olca-app-html/src/start_page/mixins/header.jade
+++ b/olca-app-html/src/start_page/mixins/header.jade
@@ -2,13 +2,14 @@ mixin header()
 	header
 		.row
 			.left
-				img.app-logo(src='images/logo_start_page.png')
+				a(href='http://www.openlca.org')
+					img.app-logo(src='images/logo_start_page.png')
 			.center
 				h1!=msg.title
 				h2#version
 		.row
 			.right
-				a(href='http://www.greendelta.com' target='_blank')
+				a(href='http://www.greendelta.com')
 					img.company-logo(src='images/greendelta-logo.png')
 			.center
 				p!=msg.subtext
