--- a/olca-app-html/src/start_page/start_page.styl
+++ b/olca-app-html/src/start_page/start_page.styl
@@ -12,7 +12,7 @@ body
 	background-color rgb(167, 189, 203, 0.8)
 	font-family "Helvetica Neue",Helvetica,Arial,sans-serif
 	font-size 14px
-	color rgb(26, 26, 26)
+	color rgb(38, 38, 38)
 	line-height 1.42857143
 
 h1, h2, h3, h4, h5
@@ -27,14 +27,11 @@ h2
 
 header
 	padding 10px 30px 0 30px
-	background-image url('images/header.png')
-	border-bottom 1px solid rgb(92, 147, 177, 0.8)
+	background-color rgb(17, 88, 132)
+	color rgb(254, 247, 235)
 	
 	h1
-		color rgb(252, 253, 254)
-
-	h2
-		color rgb(237, 238, 239)
+		color rgb(255, 255, 255)
 
 	& > *
 		height 100%
@@ -42,13 +39,19 @@ header
 	& > .row:nth-of-type(2)
 		padding-top 1px
 
+	.center
+		margin-right 0
+		
+	.right 
+		width auto
+
 	.app-logo
 		width 235px
 
 	.company-logo
 		height 24px
 		float right		
-		margin-top 30px
+		margin-top 65px
 
 		&:hover
 			content url('images/greendelta-logo-active.png')
@@ -68,20 +71,19 @@ header
 	
 .clear, .row
 	clear both
-	
-#whats-new
-	background-color rgb(82, 137, 167, 0.8)
-
-#getting-started
-	background-color rgb(106, 163, 193, 0.8)
-	
-#manuals
-	background-color rgb(151, 195, 216, 0.8)
-			
+				
 #main
 
 	.row
 		padding 10px 30px
+		
+	.right 
+		min-height 125px
+
+	hr
+		border 0
+		border-top 1px solid rgb(255, 255, 255)
+		margin 0 30px
 
 	.social-media-icon
 		height 32px
