Fixed some ui issues in start page

--- a/olca-app-html/src/start_page/mixins/community.jade
+++ b/olca-app-html/src/start_page/mixins/community.jade
@@ -5,9 +5,8 @@ mixin community()
 				img.icon(src='images/community.svg')
 				h3!=msg.community.title
 		.right
-			p!=msg.community.followUs
+			p!=msg.community.socialMedia
 			img.social-media-icon(src='images/twitter.svg')
-			p!=msg.community.becomeMember
 			img.social-media-icon(src='images/linkedin.svg')
 		.center
 			p!=msg.community.description
