--- a/olca-app-html/src/start_page/mixins/getting-started.jade
+++ b/olca-app-html/src/start_page/mixins/getting-started.jade
@@ -6,7 +6,8 @@ mixin getting-started()
 				h3!=msg.gettingStarted.title
 		.right
 			p!=msg.gettingStarted.explanatoryVideo
-			img.social-media-icon(src='images/youtube.svg')
+			a(href='https://www.youtube.com/watch?v=FqVMbwhAEW4')
+				img.social-media-icon(src='images/youtube.svg')
 		.center
 			p!=msg.gettingStarted.description
 			ul
