--- a/olca-app-html/src/start_page/mixins/manuals.jade
+++ b/olca-app-html/src/start_page/mixins/manuals.jade
@@ -6,7 +6,8 @@ mixin manuals()
 				h3!=msg.manuals.title
 		.right
 			p!=msg.manuals.instructionalVideos
-			img.social-media-icon(src='images/youtube.svg')
+			a(href='https://www.youtube.com/channel/UCGiahq1YZWK4pRXDVXuIi6w')
+				img.social-media-icon(src='images/youtube.svg')
 		.center
 			p!=msg.manuals.description
 		.clear
