--- a/olca-app-html/src/start_page/mixins/community.jade
+++ b/olca-app-html/src/start_page/mixins/community.jade
@@ -6,10 +6,16 @@ mixin community()
 				h3!=msg.community.title
 		.right
 			p!=msg.community.socialMedia
-			a(href='https://twitter.com/openlca')
-				img.social-media-icon(src='images/twitter.svg')
-			a(href='https://www.linkedin.com/groups/5060236/profile')
-				img.social-media-icon(src='images/linkedin.svg')
+			table
+				tbody
+					tr
+						td: a(href='https://twitter.com/openlca')
+							img.social-media-icon(src='images/twitter.svg')
+						td!=msg.community.followUs
+					tr
+						td: a(href='https://www.linkedin.com/groups/5060236/profile')
+							img.social-media-icon(src='images/linkedin.svg')
+						td!=msg.community.becomeMember
 		.center
 			p!=msg.community.description
 			p!=msg.community.note
