load start page and sunburst view with JavaFX

--- a/olca-app-html/src/start_page/start_page.jade
+++ b/olca-app-html/src/start_page/start_page.jade
@@ -24,6 +24,10 @@ html(lang='en')
 			+community
 		script.
 			$('a').on('click', function() {
-				openUrl($(this).attr('href'));
+				if (typeof window.java === 'undefined') {
+					console.log('java object not bound');
+					return false;
+				}
+				window.java.openUrl($(this).attr('href'));
 				return false;
 			});
