Updated welcome page

--- a/olca-app-html/src/start_page/mixins/whats-new.jade
+++ b/olca-app-html/src/start_page/mixins/whats-new.jade
@@ -6,10 +6,10 @@ mixin whats-new()
 				h3!=msg.whatsNew.title
 		.right
 			p!=msg.whatsNew.findOutMore
+			p!=msg.whatsNew.findOutMore2
 		.center
 			p!=msg.whatsNew.description
 			ul
 				li!=msg.whatsNew.bulletpoint1
-				li!=msg.whatsNew.bulletpoint2
-				li!=msg.whatsNew.bulletpoint3
+			p!=msg.whatsNew.description2
 		.clear
