--- a/olca-app-html/src/update_manager/stylus/main.styl
+++ b/olca-app-html/src/update_manager/stylus/main.styl
@@ -19,7 +19,8 @@ html, body, #container
 		border-top 1px solid rgb(224, 224, 224)
 	
 	.update-container
-		margin-left 60px
+		margin-left 20px
+		padding-right 0px
 			
 	h3
 		margin-top 0
