--- a/olca-app/src/org/openlca/app/editors/graphical/themes/Dark.css
+++ b/olca-app/src/org/openlca/app/editors/graphical/themes/Dark.css
@@ -1,4 +1,5 @@
 /* The 'Dark' theme of the openLCA graph editor. */
+/* colors from https://draculatheme.com/contribute */
 
 /* basic attributes and graph settings */
 :root {
@@ -12,37 +13,37 @@
 
 /* defaults */
 .box {
-  color: #f2f2f2;       /* font color */
+  color: #f8f8f2;       /* font color */
   background: #282A36;  /* background color */
-  border: 1px #ff79c6;  /* border width and color */
+  border: 2px #ff79c6;  /* border width and color */
 }
 
 /* unit processes */
 .box .unit-process {
-  color: #f2f2f2;       /* font color */
+  color: #f8f8f2;       /* font color */
   background: #282A36;  /* background color */
   border: 2px #ff79c6;  /* border width and color */
 }
 
 /* system processes */
 .box .system-process {
-  color: #f2f2f2;       /* font color */
+  color: #f8f8f2;       /* font color */
   background: #282A36;  /* background color */
-  border: 2px #bd93f9;  /* border width and color */
+  border: 3px #bd93f9;  /* border width and color */
 }
 
 /* library processes */
 .box .library-process {
-  color: #f2f2f2;       /* font color */
+  color: #f8f8f2;       /* font color */
   background: #282A36;  /* background color */
-  border: 2px #f1fa8c;  /* border width and color */
+  border: 3px #f1fa8c;  /* border width and color */
 }
 
 /* sub-systems */
 .box .sub-system {
-  color: #f2f2f2;       /* font color */
+  color: #f8f8f2;       /* font color */
   background: #282A36;  /* background color */
-  border: 2px #804096;  /* border width and colcor */
+  border: 5px #8daff7;  /* border width and colcor */
 }
 
 
@@ -50,7 +51,7 @@
 
 /* defaults */
 .link {
-  color: #f2f2f2;
+  color: #f8f8f2;
 }
 
 /* product flows */
@@ -63,17 +64,12 @@
   color: #ffb86c;
 }
 
-/* elementary flows */
-.link .elementary-flow {
-  color: #50fa7b;
-}
-
 
 /* -- labels -- */
 
 /* info-headers */
 .label .info {
-  color: #f2f2f2;
+  color: #6272a4;
 }
 
 /* product flows */
