Change plus/minus image for ⊕/⊖ characters.

--- a/olca-app/src/org/openlca/app/editors/graphical/themes/Dark.css
+++ b/olca-app/src/org/openlca/app/editors/graphical/themes/Dark.css
@@ -5,7 +5,7 @@
 :root {
   --name: 'Dark';         /* the name of the theme */
   --mode: 'dark';         /* this is a dark theme */
-  background: #282a36;  /* the background color of the graph */
+  background: #2B2B2B;  /* the background color of the graph */
 }
 
 
