--- a/olca-app/src/org/openlca/app/editors/graphical/themes/Default.css
+++ b/olca-app/src/org/openlca/app/editors/graphical/themes/Default.css
@@ -19,28 +19,28 @@
 
 /* unit processes */
 .box .unit-process {
-  color: #000000;       /* font color */
+  color: #800080;       /* font color */
   background: #ffffff;  /* background color */
   border: 2px #800080;  /* border width and color */
 }
 
 /* system processes */
 .box .system-process {
-  color: #000000;       /* font color */
+  color: #800080;       /* font color */
   background: #ffffff;  /* background color */
   border: 3px #800080;  /* border width and color */
 }
 
 /* library processes */
 .box .library-process {
-  color: #000000;       /* font color */
+  color: #ff9700;       /* font color */
   background: #ffffff;  /* background color */
   border: 3px #ff9700;  /* border width and color */
 }
 
 /* sub-systems */
 .box .sub-system {
-  color: #000000;       /* font color */
+  color: #125985;       /* font color */
   background: #ffffff;  /* background color */
   border: 3px #125985;  /* border width and color */
 }
