--- a/olca-app/src/org/openlca/app/editors/graphical/themes/Default.css
+++ b/olca-app/src/org/openlca/app/editors/graphical/themes/Default.css
@@ -20,43 +20,43 @@
 /* reference processes */
 .box .reference-process {
   color: #000000;       /* font color */
-  background: #fff5ff;  /* background color */
-  border: 3px #800080;  /* border width and color */
+  background: #fffaff;  /* background color */
+  border: 2px #800080;  /* border width and color */
 }
 
 /* unit processes */
 .box .unit-process {
   color: #000000;       /* font color */
   background: #ffffff;  /* background color */
-  border: 2px #800080;  /* border width and color */
+  border: 1px #800080;  /* border width and color */
 }
 
 /* system processes */
 .box .system-process {
   color: #000000;       /* font color */
   background: #ffffff;  /* background color */
-  border: 3px #800080;  /* border width and color */
+  border: 2px #800080;  /* border width and color */
 }
 
 /* library processes */
 .box .library-process {
   color: #000000;       /* font color */
   background: #ffffff;  /* background color */
-  border: 3px #999999;  /* border width and color */
+  border: 2px #999999;  /* border width and color */
 }
 
 /* sub-systems */
 .box .sub-system {
   color: #000000;       /* font color */
   background: #ffffff;  /* background color */
-  border: 3px #125985;  /* border width and color */
+  border: 2px #125985;  /* border width and color */
 }
 
 /* results */
 .box .result {
   color: #000000;       /* font color */
   background: #ffffff;  /* background color */
-  border: 3px #eda211;  /* border width and color */
+  border: 2px #eda211;  /* border width and color */
 }
 
 /* -- process links -- */
