--- a/olca-app/src/org/openlca/app/tools/graphics/themes/Default.css
+++ b/olca-app/src/org/openlca/app/tools/graphics/themes/Default.css
@@ -63,6 +63,13 @@
   border: 2px #eda211;  /* border width and color */
 }
 
+/* sticky-note */
+#model box .sticky-note {
+  color: #000000;       /* font color */
+  background: #ffffff;  /* background color */
+  border: 2px #ccff00;  /* border width and color */
+}
+
 /* -- links -- */
 
 /* defaults */
