--- a/olca-app/src/org/openlca/app/tools/graphics/themes/Default.css
+++ b/olca-app/src/org/openlca/app/tools/graphics/themes/Default.css
@@ -2,6 +2,7 @@
 
 /* basic attributes and graph settings */
 :root {
+  --version: '2';       /* the version of openLCA */
   --name: 'Default';    /* the name of the theme */
   --mode: 'light';      /* this is a light theme */
 }
