Select the model graph theme based on system theme.

--- a/olca-app/src/org/openlca/app/tools/graphics/themes/Light.css
+++ b/olca-app/src/org/openlca/app/tools/graphics/themes/Light.css
@@ -3,7 +3,7 @@
 /* basic attributes and graph settings */
 :root {
   --version: '2';       /* the version of openLCA */
-  --name: 'Default';    /* the name of the theme */
+  --name: 'Light';    /* the name of the theme */
   --mode: 'light';      /* this is a light theme */
 }
 
