decreased gap between containers and increased font size

--- a/olca-app-html/src/home/home.css
+++ b/olca-app-html/src/home/home.css
@@ -111,9 +111,8 @@ body {
 }
 
 .info-icon {
-    width: 16px;
-    height: 16px;
-    margin-right: 4px;
+    max-width: 16px;
+    margin-right: 8px;
 }
 
 .libhint-link {
@@ -247,32 +246,22 @@ body {
     color: #98c72b;
     cursor: pointer;
 }
-@media (max-width: 995px) {
-    .nav-item {
-        font-size: 18px;
-    }
-
-    .content-box {
-        font-size: 18px;
-        padding: 15px;
-    }
-
-    .nav-info-container {
-        font-size: 12px;
-    }
-
-    .img-link {
-        width: 120px;
-        height: 80px;
-    }
-
-    .gd-logo {
-        width: 150px;
-        height: 18px;
-    }
-}
 
 @media (max-width: 768px) {
+    .navigation {
+        flex-direction: column;
+        gap: 10px
+    }
+
+    .nav-info {
+        font-size: 16px;
+        line-height: 16px;
+    }
+
+    .info-icon {
+        max-width: 16px;
+    }
+
     .nav-item {
         font-size: 14px;
     }
@@ -280,10 +269,6 @@ body {
     .content-box {
         font-size: 14px;
         padding: 10px;
-    }
-
-    .nav-info-container {
-        font-size: 12px;
     }
 
     .img-link {
@@ -302,30 +287,55 @@ body {
     }
 }
 
-@media (max-width: 548px) {
-    .navigation {
-        flex-direction: column;
+@media (max-width: 1024px) {
+    .nav-item {
+        font-size: 18px;
     }
 
-    .nav-info-container {
-        font-size: 12px;
-        margin-top: 10px;
+    .content-box {
+        font-size: 18px;
+        padding: 15px;
+    }
+
+    .img-link {
+        width: 120px;
+        height: 80px;
+    }
+
+    .gd-logo {
+        width: 150px;
+        height: 18px;
     }
 }
 
-@media (min-width: 2000px) {
+@media (min-width: 1280px) {
+    .content-box {
+        margin: 0 auto;
+    }
+}
+
+@media (min-width: 1440px) {
+    .nav-info {
+        font-size: 22px;
+        line-height: 22px;
+    }
+
+    .info-icon {
+        max-width: 22px;
+    }
+
     .container {
         overflow: hidden;
     }
     .nav-item {
-        font-size: 28px;
+        font-size: 22px;
     }
 
     .section {
         height: calc(100vh - 186px);
     }
     .content-box {
-        font-size: 28px;
+        font-size: 22px;
         width: 800px;
         height: 350px;
     }
