increasing margin for height <=700px screens

--- a/olca-app-html/src/home/home.css
+++ b/olca-app-html/src/home/home.css
@@ -356,3 +356,13 @@ body {
         height: 48px;
     }
 }
+
+@media (max-height: 700px){
+    .footer{
+        margin-top: 20px
+    }
+
+    .header{
+        margin-bottom: 20px;
+    }
+}
