--- a/olca-app/src/org/openlca/app/tools/graphics/themes/Dark.css
+++ b/olca-app/src/org/openlca/app/tools/graphics/themes/Dark.css
@@ -78,18 +78,18 @@
   color: #f8f8f2;
 }
 
-/* product flows */
-#model link.product {
-  color: #8be9fd;
+/* product flows link */
+#model link .product {
+  color: #f8f8f2;
 }
 
-/* waste flows */
+/* waste flows link */
 #model link .waste {
-  color: #ffb86c;
+  color: #f8f8f2;
 }
 
 /* selected flows */
-link ::selection {
+#model link ::selection {
   color: #fcba03;
 }
 
