--- a/olca-app/src/org/openlca/app/tools/graphics/themes/Dark.css
+++ b/olca-app/src/org/openlca/app/tools/graphics/themes/Dark.css
@@ -65,6 +65,13 @@
   border: 2px #eda211;  /* border width and color */
 }
 
+/* avoided product/waste process */
+#model box .avoided {
+  color: #f8f8f2;       /* font color */
+  background: #313442;  /* background color */
+  border: 2px #ff79c6;  /* border width and color */
+}
+
 /* sticky-note */
 #model box .sticky-note {
   color: #000000;       /* font color */
