--- a/olca-app-html/src/home/home.css
+++ b/olca-app-html/src/home/home.css
@@ -121,9 +121,10 @@ body {
 }
 
 .section {
-    width: 100%;
     height: calc(100vh - 186px);
     display: flex;
+    margin-left: 25px;
+    margin-right: 25px;
 }
 
 .left-section {
@@ -134,7 +135,6 @@ body {
 .nav-container {
     width: 100%;
     height: 100%;
-    padding-left: 25px;
     display: flex;
     align-content: center;
     align-items: center;
@@ -194,12 +194,10 @@ body {
 }
 
 .right-section-container {
-    width: calc(100% - 25px);
     height: 100%;
     display: flex;
     align-content: center;
     align-items: center;
-    padding-right: 25px;
 }
 
 .content-box {
@@ -252,7 +250,7 @@ body {
 @media (max-width: 768px) {
     .navigation {
         flex-direction: column;
-        gap: 10px
+        gap: 10px;
     }
 
     .nav-info {
@@ -357,12 +355,12 @@ body {
     }
 }
 
-@media (max-height: 700px){
-    .footer{
-        margin-top: 20px
+@media (max-height: 700px) {
+    .footer {
+        margin-top: 20px;
     }
 
-    .header{
+    .header {
         margin-bottom: 20px;
     }
 }
