--- a/olca-app-html/src/home/home.css
+++ b/olca-app-html/src/home/home.css
@@ -1,366 +1,378 @@
 @font-face {
-    font-family: 'TheSans';
-    font-weight: normal;
-    font-style: normal;
-    src: url('fonts/TheSans_Plain.eot?#iefix') format('embedded-opentype'),
-        url('fonts/TheSans_Plain.ttf') format('truetype');
+  font-family: 'TheSans';
+  font-weight: normal;
+  font-style: normal;
+  src: url('fonts/TheSans_Plain.eot?#iefix') format('embedded-opentype'),
+    url('fonts/TheSans_Plain.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: 'TheSans';
-    font-weight: bold;
-    font-style: normal;
-    src: url('fonts/TheSans_B7_Bold.eot?#iefix') format('embedded-opentype'),
-        url('fonts/TheSans_B7_Bold.ttf') format('truetype');
+  font-family: 'TheSans';
+  font-weight: bold;
+  font-style: normal;
+  src: url('fonts/TheSans_B7_Bold.eot?#iefix') format('embedded-opentype'),
+    url('fonts/TheSans_B7_Bold.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: 'Inter';
-    font-weight: normal;
-    font-style: normal;
-    src: url('fonts/Inter-Regular.ttf') format('truetype');
+  font-family: 'Inter';
+  font-weight: normal;
+  font-style: normal;
+  src: url('fonts/Inter-Regular.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: 'Iosevka Web';
-    font-display: swap;
-    font-weight: 400;
-    font-stretch: normal;
-    font-style: normal;
-    src: url('fonts/iosevka-regular.ttf') format('truetype'),
-        url('fonts/iosevka-regular.woff2') format('woff2');
+  font-family: 'Iosevka Web';
+  font-display: swap;
+  font-weight: 400;
+  font-stretch: normal;
+  font-style: normal;
+  src: url('fonts/iosevka-regular.ttf') format('truetype'),
+    url('fonts/iosevka-regular.woff2') format('woff2');
+}
+
+:root {
+  --green: #98c72b;
+  --white: #fff;
+  --yellow: #ffd233;
+  --gray: #8b8893;
 }
 
 html,
 body {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
-    position: relative;
-    min-height: 100%;
+  position: relative;
+  min-height: 100%;
 }
 
 body {
-    font-family: 'Inter', 'Iosevka Web', 'TheSans', Helvetica, Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+  font-family: 'Inter', 'Iosevka Web', 'TheSans', Helvetica, Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-image: url('images/background_start_page.jpg');
-    background-color: rgba(0, 0, 0, 0.5);
-    background-blend-mode: overlay;
-    line-height: 1.42857143;
-    background-attachment: fixed;
-    background-size: cover;
-    position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url('images/background_start_page.jpg');
+  /*
+  background-color: rgba(0, 0, 0, 0.5);
+  background-blend-mode: overlay;
+  */
+  line-height: 1.42857143;
+  background-attachment: fixed;
+  background-size: cover;
+  position: relative;
 }
 
 .max-width-container {
-    width: 100%;
-    height: 100%;
-    max-width: 2000px;
+  width: 100%;
+  height: 100%;
+  max-width: 2000px;
 }
+
 .header {
-    width: 100%;
-    height: 136px;
+  width: 100%;
+  height: 136px;
 }
 
 .navigation {
-    padding-top: 25px;
-    padding-left: 25px;
-    padding-right: 25px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-family: 'Inter';
+  padding-top: 25px;
+  padding-left: 25px;
+  padding-right: 25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: 'TheSans';
 }
 
 .img-link {
-    width: 180px;
-    height: 111px;
+  width: 180px;
+  height: 111px;
 }
 
 .openlca-logo {
-    width: 100%;
+  width: 100%;
 }
 
 .nav-info-container {
-    font-family: 'Iosevka Web';
-    display: flex;
-    justify-content: space-between;
-    background: rgba(0, 0, 0, 0.6);
-    border-radius: 10px;
-    color: #ffd233;
-    padding-left: 15px;
-    padding-right: 15px;
-    cursor: pointer;
+  font-family: 'Iosevka Web';
+  display: flex;
+  justify-content: space-between;
+  background: rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
+  color: var(--yellow);
+  padding-left: 15px;
+  padding-right: 15px;
+  cursor: pointer;
 }
 
 .nav-info {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .info-icon {
-    max-width: 16px;
-    margin-right: 8px;
+  max-width: 16px;
+  margin-right: 8px;
 }
 
 .libhint-link {
-    text-decoration: none;
-    color: #ffd233;
+  text-decoration: none;
+  color: var(--yellow);
 }
 
 .section {
-    height: calc(100vh - 186px);
-    display: flex;
-    margin-left: 25px;
-    margin-right: 25px;
+  height: calc(100vh - 186px);
+  display: flex;
+  margin-left: 25px;
+  margin-right: 25px;
 }
 
 .left-section {
-    width: 35%;
-    height: 100%;
+  width: 35%;
+  height: 100%;
 }
 
 .nav-container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-content: center;
-    align-items: center;
-    overflow-y: hidden;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-content: center;
+  align-items: center;
+  overflow-y: hidden;
 }
 
 .nav {
-    list-style-type: none;
-    color: #fff;
-    margin: 0px;
-    padding: 0px;
+  list-style-type: none;
+  color: var(--white);
+  margin: 0px;
+  padding: 0px;
 }
 
 .nav-item {
-    font-size: 24px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    cursor: pointer;
-    position: relative;
-    width: fit-content;
+  font-size: 24px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  cursor: pointer;
+  position: relative;
+  width: fit-content;
 }
 
 .nav-item::after {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 4px;
-    height: 2px;
-    background-color: #fff;
-    content: '';
-    display: none;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 4px;
+  height: 2px;
+  background-color: var(--white);
+  content: '';
+  display: none;
 }
 
 .nav-item.active,
 .nav-item.active::after {
-    color: #98c72b;
+  color: var(--white);
 }
 
 .nav-item.active::after {
-    display: block;
-    background: #98c72b;
+  display: block;
+  background: var(--white);
 }
 
 .nav-item:hover::after {
-    display: block;
+  display: block;
 }
 
 .footer {
-    width: 100%;
-    height: 50px;
+  width: 100%;
+  height: 50px;
 }
 
 .right-section {
-    width: 65%;
-    height: 100%;
-    overflow-y: hidden;
+  width: 65%;
+  height: 100%;
+  overflow-y: hidden;
 }
 
 .right-section-container {
-    height: 100%;
-    display: flex;
-    align-content: center;
-    align-items: center;
+  height: 100%;
+  display: flex;
+  align-content: center;
+  align-items: center;
 }
 
 .content-box {
-    margin: auto;
-    margin-right: 0px;
-    width: 500px;
-    min-height: 250px;
-    padding: 25px;
-    font-size: 22px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgba(0, 0, 0, 0.6);
-    color: #fff;
-    word-wrap: break-word;
-    white-space: pre-wrap;
-    word-break: break-word;
-    font-family: 'Iosevka Web';
+  margin: auto;
+  margin-right: 0px;
+  width: 500px;
+  min-height: 250px;
+  padding: 25px;
+  font-size: 22px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /*background: rgba(0, 0, 0, 0.6);*/
+  color: var(--gray);
+  word-wrap: break-word;
+  white-space: pre-wrap;
+  word-break: break-word;
+  font-family: 'TheSans';
 }
 
 .footer-container {
-    padding-bottom: 25px;
-    padding-left: 25px;
-    padding-right: 25px;
-    display: flex;
+  padding-bottom: 25px;
+  padding-left: 25px;
+  padding-right: 25px;
+  display: flex;
 }
 
 .gd-logo {
-    width: 180px;
-    height: 24px;
-    background-image: url('images/greendelta-logo.png');
-    margin: auto;
-    margin-right: 0px;
-    background-size: contain;
-    background-repeat: no-repeat;
+  width: 180px;
+  height: 24px;
+  background-image: url('images/greendelta-logo.png');
+  margin: auto;
+  margin-right: 0px;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 .gd-logo:hover {
-    background-image: url('images/greendelta-logo-active.png');
-    background-size: cover;
-    background-size: contain;
-    background-repeat: no-repeat;
+  background-image: url('images/greendelta-logo-active.png');
+  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 .content-box a {
-    color: #98c72b;
-    cursor: pointer;
+  color: var(--gray);
+  cursor: pointer;
 }
 
 @media (max-width: 768px) {
-    .navigation {
-        flex-direction: column;
-        gap: 10px;
-    }
+  .navigation {
+    flex-direction: column;
+    gap: 10px;
+  }
 
-    .nav-info {
-        font-size: 16px;
-        line-height: 16px;
-    }
+  .nav-info {
+    font-size: 22px;
+    line-height: 22px;
+  }
 
-    .info-icon {
-        max-width: 16px;
-    }
+  .info-icon {
+    max-width: 16px;
+  }
 
-    .nav-item {
-        font-size: 14px;
-    }
+  .nav-item {
+    font-size: 14px;
+  }
 
-    .content-box {
-        font-size: 14px;
-        padding: 10px;
-    }
+  .content-box {
+    font-size: 14px;
+    padding: 10px;
+  }
 
-    .img-link {
-        width: 120px;
-        height: 70px;
-    }
+  .img-link {
+    width: 120px;
+    height: 70px;
+  }
 
-    .right-section {
-        width: 50%;
-        height: 100%;
-    }
+  .right-section {
+    width: 50%;
+    height: 100%;
+  }
 
-    .left-section {
-        width: 50%;
-        height: 100%;
-    }
+  .left-section {
+    width: 50%;
+    height: 100%;
+  }
 }
 
 @media (max-width: 1024px) {
-    .nav-item {
-        font-size: 18px;
-    }
+  .nav-item {
+    font-size: 18px;
+  }
 
-    .content-box {
-        font-size: 18px;
-        padding: 15px;
-    }
+  .content-box {
+    font-size: 18px;
+    padding: 15px;
+  }
 
-    .img-link {
-        width: 120px;
-        height: 80px;
-    }
+  .img-link {
+    width: 120px;
+    height: 80px;
+  }
 
-    .gd-logo {
-        width: 150px;
-        height: 18px;
-    }
+  .gd-logo {
+    width: 150px;
+    height: 18px;
+  }
 }
 
 @media (min-width: 1280px) {
-    .content-box {
-        margin: 0 auto;
-    }
+  .content-box {
+    margin: 0 auto;
+  }
 }
 
 @media (min-width: 1440px) {
-    .nav-info {
-        font-size: 22px;
-        line-height: 22px;
-    }
+  .nav-info {
+    font-size: 22px;
+    line-height: 22px;
+  }
 
-    .info-icon {
-        max-width: 22px;
-    }
+  .info-icon {
+    max-width: 22px;
+  }
 
-    .container {
-        overflow: hidden;
-    }
-    .nav-item {
-        font-size: 22px;
-    }
+  .container {
+    overflow: hidden;
+  }
 
-    .section {
-        height: calc(100vh - 186px);
-    }
-    .content-box {
-        font-size: 22px;
-        width: 800px;
-        height: 350px;
-    }
+  .nav-item {
+    font-size: 22px;
+  }
 
-    .nav-info-container {
-        font-size: 16px;
-    }
+  .section {
+    height: calc(100vh - 186px);
+  }
 
-    .img-link {
-        width: 180px;
-        height: 120px;
-    }
+  .content-box {
+    font-size: 22px;
+    width: 800px;
+    height: 350px;
+  }
 
-    .gd-logo {
-        width: 200px;
-        height: 48px;
-    }
+  .nav-info-container {
+    font-size: 16px;
+  }
+
+  .img-link {
+    width: 180px;
+    height: 120px;
+  }
+
+  .gd-logo {
+    width: 200px;
+    height: 48px;
+  }
 }
 
 @media (max-height: 700px) {
-    .footer {
-        margin-top: 20px;
-    }
+  .footer {
+    margin-top: 20px;
+  }
 
-    .header {
-        margin-bottom: 20px;
-    }
+  .header {
+    margin-bottom: 20px;
+  }
 }
